<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:layout_marginTop="113dp"
        />

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/phone"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/login_phone"
            android:gravity="center"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/login_password"
            android:textColor="@color/white"
            android:textColorHint="@color/hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/register_repeat_password"
            android:textColor="@color/white"
            android:gravity="center"
            android:textColorHint="@color/hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/invite_code"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/register_invite_code"
            android:textColor="@color/white"
            android:gravity="center"
            android:textColorHint="@color/hint" />
    </LinearLayout>

    <ImageView
        android:clickable="true"
        android:id="@+id/registerButton"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@mipmap/register_btn"
        />

    <TextView
        android:id="@+id/register_back"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/register_cancel"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:gravity="center"
        android:clickable="true"
        />

</LinearLayout>
