<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/border_bottom"
    android:layout_marginBottom="14dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_height="20dp">
        <TextView
            android:textColor="@color/white"
            android:text="@string/game_bet"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/game_bet"
            android:text="@string/game_bet"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_height="20dp">
        <TextView
            android:textColor="@color/white"
            android:text="@string/game_bet_bonus"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/game_bet_bonus"
            android:text="@string/game_bet_bonus"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_height="20dp">
        <TextView
            android:textColor="@color/white"
            android:text="@string/game_bet_type"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/game_bet_type"
            android:text="@string/game_bet_type"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_height="20dp">
        <TextView
            android:textColor="@color/white"
            android:text="@string/game_bet_user_name"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/game_bet_user_name"
            android:text="@string/game_bet_user_name"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_height="20dp">
        <TextView
            android:textColor="@color/white"
            android:text="@string/game_bet_win"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/game_bet_win"
            android:text="@string/game_bet_win"
            android:textColor="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
    </LinearLayout>
</LinearLayout>
