<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@mipmap/login_top" />
    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/phone"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/login_phone"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/border_bottom"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:background="@null"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/login_password"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            android:gravity="center" />
    </LinearLayout>

    <ImageView
        android:id="@+id/loginButton"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@mipmap/login_btn"
        android:layout_marginTop="20dp"
        android:clickable="true"
        />

    <ImageView
        android:id="@+id/register"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="10dp"
        android:src="@mipmap/register_btn"
        android:clickable="true"
        />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lang_cn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/login_cn"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/lang_en"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/login_en"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:clickable="true"
            />
        <TextView
            android:id="@+id/lang_vn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/login_vn"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:clickable="true"
            />
    </LinearLayout>

</LinearLayout>
