<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    >
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/txt_setting"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:adjustViewBounds="true"/>
    </LinearLayout>
    <LinearLayout
        android:background="@color/yellow"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:id="@+id/setting_password"
        android:layout_width="match_parent"
        android:background="@drawable/border_bottom_white"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_password"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/r_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/setting_feedback"
        android:layout_width="match_parent"
        android:background="@drawable/border_bottom_white"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_feedback"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/r_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/border_bottom_white"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_lang"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/setting_lang"
            android:textColor="@color/white"
            android:text="@string/setting_cur_lang"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/border_bottom_white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/setting_silent"
            android:textColor="@color/white" />

        <Switch
            android:id="@+id/setting_silent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_jifen"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_jifen"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/r_arrow"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_bank"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_bank"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/r_arrow"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_version"
        android:layout_width="match_parent"
        android:background="@color/gray"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_height="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_version"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/setting_v"
            android:textColor="@color/white"
            android:text="1.0"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/logout_button"
        android:background="@mipmap/btn_logout"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@mipmap/btn_logout"
        android:layout_width="220dp"
        android:adjustViewBounds="true"
        android:layout_height="wrap_content"/>
</LinearLayout>
